Fix horizontal scrollbar shows in mobile when header autohide

--- a/mkdocs_overrides/css/custom.css
+++ b/mkdocs_overrides/css/custom.css
@@ -60,3 +60,7 @@
     color: #fff;
   }
 }
+
+.md-header[data-md-state="hidden"] {
+  overflow: hidden;
+}
